# schedule-parser-rusted

./: .env.test  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  schedule.xls
.github/workflows/: build.yml  release.yml  test.yml
actix-macros/: Cargo.toml
actix-macros/src/: lib.rs
actix-test/: Cargo.toml
actix-test/src/: lib.rs
benches/: parse.rs
database/: Cargo.toml
database/entity/: Cargo.toml
database/entity/src/: lib.rs  prelude.rs  sea_orm_active_enums.rs  service_user.rs  user.rs
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m20250904_024854_init.rs  m20251027_230335_add_service_users.rs
database/src/: lib.rs  query.rs
lib/schedule_parser/: Cargo.toml
lib/schedule_parser/benches/: parse.rs
lib/schedule_parser/src/lib/: lib.rs  schema.rs
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2025-03-21-211822_create_user_role/: up.sql
migrations/2025-03-21-212111_create_users/: up.sql
migrations/2025-03-21-212723_create_fcm/: down.sql  up.sql
migrations/2025-05-28-185850_add_tg_id_to_users/: down.sql  up.sql
migrations/2025-05-28-191056_make_users_password_nullable/: down.sql  up.sql
migrations/2025-05-28-200403_rename_users_app_version_and_make_it_nullable/: down.sql  up.sql
migrations/2025-05-29-140941_make_users_group_nullable/: down.sql  up.sql
migrations/2025-05-29-142329_make_users_access_token_nullable/: down.sql  up.sql
providers/: Cargo.toml
providers/base/: Cargo.toml
providers/base/src/: hasher.rs  lib.rs
providers/provider-engels-polytechnic/: Cargo.toml
providers/provider-engels-polytechnic/src/: lib.rs  updater.rs  xls_downloader.rs
providers/provider-engels-polytechnic/src/parser/: error.rs  macros.rs  mod.rs  worksheet.rs
providers/provider-engels-polytechnic/src/updater/: error.rs  mod.rs
providers/src/: lib.rs
schedule-parser/: Cargo.toml
schedule-parser/benches/: parse.rs
schedule-parser/src/: lib.rs  macros.rs  schema.rs  worksheet.rs
src/: app_state.rs  main.rs  test_env.rs
src/database/: driver.rs  mod.rs  models.rs  schema.rs
src/extractors/: authorized_user.rs  base.rs  mod.rs
src/middlewares/: authorization.rs  content_type.rs  mod.rs
src/parser/: mod.rs  schema.rs
src/routes/: mod.rs  schema.rs
src/routes/admin/service_users/: create.rs
src/routes/auth/: mod.rs  schema.rs  shared.rs  sign_in.rs  sign_up.rs
src/routes/fcm/: mod.rs  set_token.rs  update_callback.rs
src/routes/flow/: mod.rs  telegram_auth.rs  telegram_complete.rs
src/routes/schedule/: cache_status.rs  get_cache_status.rs  get_group.rs  get_group_names.rs  get_schedule.rs  get_teacher.rs  get_teacher_names.rs  group.rs  group_by_name.rs  group_names.rs  mod.rs  schedule.rs  schema.rs  teacher.rs  teacher_names.rs  update_download_url.rs
src/routes/users/: by.rs  change_group.rs  change_username.rs  me.rs  mod.rs
src/routes/vk_id/: mod.rs  oauth.rs
src/state/: fcm_client.rs  mod.rs  schedule.rs
src/state/env/: mod.rs  schedule.rs  telegram.rs  vk_id.rs  yandex_cloud.rs
src/utility/: error.rs  hasher.rs  jwt.rs  mod.rs  mutex.rs  req_auth.rs  telegram.rs
src/xls_downloader/: basic_impl.rs  interface.rs  mod.rs
test-data/: engels-polytechnic.xls
