[workspace]
members = ["actix-macros", "actix-test", "schedule-parser"]

[package]
name = "schedule-parser-rusted"
version = "1.0.5"
edition = "2024"
publish = false

[profile.release]
debug = true

[dependencies]
schedule-parser = { path = "schedule-parser", features = ["test-utils"] }
actix-macros = { path = "actix-macros" }

# serve api
actix-web = "4"

# basic
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = { version = "2", features = ["full"] }
dotenvy = "0.15.7"

# sql
diesel = { version = "2.2.8", features = ["postgres"] }
diesel-derive-enum = { git = "https://github.com/Havunen/diesel-derive-enum.git", features = ["postgres"] }

# logging
env_logger = "0.11.7"

# TODO: remove support for android app and fcm?
firebase-messaging-rs = { git = "https://github.com/i10416/firebase-messaging-rs.git" }

# async
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"

# authorization
bcrypt = "0.17.0"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }

# creating users
objectid = "0.2.0"

# schedule downloader
reqwest = { version = "0.12.15", features = ["json"] }
ua_generator = "0.5"
mime = "0.3.17"

# error handling
sentry = "0.39"
sentry-actix = "0.39"

# [de]serializing
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"

sha1 = "0.11.0-rc.0"

# documentation
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "6", features = ["actix-web"] }
utoipa-actix-web = "0.1"

uuid = { version = "1", features = ["v4"] }
hex-literal = "1"
log = "0.4"

# telegram webdata deciding and verify
base64 = "0.22"
percent-encoding = "2.3"
ed25519-dalek = "2"

[dev-dependencies]
actix-test = { path = "actix-test" }
