[workspace]
members = ["actix-macros", "actix-test", "providers"]

[package]
name = "schedule-parser-rusted"
version = "1.3.1"
edition = "2024"
publish = false

[profile.release]
debug = true

[features]
trace = ["tracing", "console-subscriber"]

[dependencies]
providers = { path = "providers" }
actix-macros = { path = "actix-macros" }

# serve api
actix-web = "4.11.0"

# basic
chrono = { version = "0.4.42", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15.7"

# sql
database = { path = "database" }

# logging
env_logger = "0.11.8"

# async
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.16"
futures-util = "0.3.31"

# authorization
bcrypt = "0.17.1"
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }

# creating users
objectid = "0.2.0"

# schedule downloader
reqwest = { version = "0.12.23", features = ["json"] }
mime = "0.3.17"

# error handling
sentry = "0.45.0"
sentry-actix = "0.43.0"

# [de]serializing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14"

sha1 = "0.11.0-rc.2"

# documentation
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "6.0.0", features = ["actix-web"] }
utoipa-actix-web = "0.1.2"

uuid = { version = "1.18.1", features = ["v4"] }
hex-literal = "1"
log = "0.4.28"

# telegram webdata deciding and verify
base64 = "0.22.1"
percent-encoding = "2.3.2"
ed25519-dalek = "3.0.0-pre.1"

# development tracing
console-subscriber = { version = "0.4.1", optional = true }
tracing = { version = "0.1.41", optional = true }

[dev-dependencies]
providers = { path = "providers", features = ["test"] }
actix-test = { path = "actix-test" }