[workspace]
members = ["actix-macros", "actix-test", "providers"]

[package]
name = "schedule-parser-rusted"
version = "1.3.1"
edition = "2024"
publish = false

[profile.release]
debug = true

[features]
trace = ["tracing", "console-subscriber"]

[dependencies]
providers = { path = "providers" }
actix-macros = { path = "actix-macros" }

# serve api
actix-web = "4"

# basic
chrono = { version = "0", features = ["serde"] }
derive_more = { version = "2", features = ["full"] }
dotenvy = "0"

# sql
database = { path = "database" }

# logging
env_logger = "0"

# async
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-util = "0"
futures-util = "0"

# authorization
bcrypt = "0"
jsonwebtoken = { version = "10", features = ["use_pem"] }

# creating users
objectid = "0"

# schedule downloader
reqwest = { version = "0", features = ["json"] }
mime = "0"

# error handling
sentry = "0"
sentry-actix = "0"

# [de]serializing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

sha1 = "0.11.0-rc.2"

# documentation
utoipa = { version = "5", features = ["actix_extras", "chrono"] }
utoipa-rapidoc = { version = "6", features = ["actix-web"] }
utoipa-actix-web = "0"

uuid = { version = "1", features = ["v4"] }
hex-literal = "1"
log = "0"

# telegram webdata deciding and verify
base64 = "0"
percent-encoding = "2"
ed25519-dalek = "3.0.0-pre.1"

# development tracing
console-subscriber = { version = "0", optional = true }
tracing = { version = "0", optional = true }

[dev-dependencies]
providers = { path = "providers", features = ["test"] }
actix-test = { path = "actix-test" }