[package]
name = "schedule-parser"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []

[dependencies]
calamine = "0.26"
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2", features = ["full"] }
sentry = "0.38"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
regex = "1.11.1"
utoipa = { version = "5", features = ["chrono"] }
strsim = "0.11.1"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "parse"
harness = false