[package]
name = "schedule-parser"
version = "0.1.0"
edition = "2024"

[features]
test-utils = []

[dependencies]
# because original repo is using yanked zip dependency
calamine = { git = "https://github.com/prophittcorey/calamine.git", branch = "fix/zip-3.0" }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2", features = ["full"] }
sentry = "0.39"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
regex = "1.11.1"
utoipa = { version = "5", features = ["chrono"] }
strsim = "0.11.1"
log = "0.4.26"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "parse"
harness = false