[package]
name = "schedule_parser"
version = "0.2.0"
edition = "2024"

[lib]
name = "schedule_parser"
path = "src/lib/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
chrono = { version = "0.4.40", features = ["serde"] }
calamine = "0.26.1"
regex = "1.11.1"
fuzzy-matcher = "0.3.7"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "parse"
harness = false
