[package]
name = "base"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-util = "0.7.16"
async-trait = "0.1.89"

chrono = { version = "0.4.41", features = ["serde"] }

serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"

utoipa = { version = "5.4.0", features = ["macros", "chrono"] }

sha1 = "0.11.0-rc.0"
