[package]
name = "provider-engels-polytechnic"
version = "0.2.3"
edition = "2024"

[features]
test = []

[dependencies]
base = { path = "../base" }

tokio = { version = "1", features = ["sync", "macros", "time"] }
tokio-util = "0"

chrono = { version = "0", features = ["serde"] }

derive_more = { version = "2", features = ["error", "display", "from"] }

utoipa = { version = "5", features = ["macros", "chrono"] }

calamine = "0"
async-trait = "0"

reqwest = "0"
ua_generator = "0"
regex = "1"
strsim = "0"
log = "0"
sentry = "0"
fancy-regex = "0"

